[tool.poetry]
name = "sund"
version = "0.1.0"
description = "A simple deamon to change the monitor brightness based on the sun position"
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
suntime = "^1.2.5"
socpi = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.225"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"


[tool.ruff]
line-length = 80
select = ["E", "F", "D", "N"]
ignore = ["D203"]
target-version = "py310"
